* Removed absolute positioning on .releases (causing clipping) * Fixed incorrect -webkit-border-radius syntax

--- a/www/css/scf.css
+++ b/www/css/scf.css
@@ -16,14 +16,14 @@
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     border-radius:10px;
-    position: absolute;
     float: right;
     background-color: #BBB;
     color: #FFF;
 }
 #maincontent .releases h3 {
     -moz-border-radius:10px 10px 0 0;
-    -webkit-border-radius:10px 10px 0 0;
+    -webkit-border-top-left-radius:10px;
+    -webkit-border-top-right-radius:10px;
     border-radius:10px 10px 0 0;
     font-family: Georgia,Palatino,"Times New Roman",Times,serif;
     font-size: 150%;
